src/app/App.css
body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: "Gill Sans Extrabold", sans-serif;
  background-image: url("../../public/desk.jpg");
  backdrop-filter: blur(7px);
  background-size: cover;
  background-repeat: no-repeat;
  line-height: 1.2;
  color: #141414;
  margin: 0;
}

ol,
ul {
  padding-left: 0;
  list-style: none;
}

h1 {
  font-size: 36px;
}

h2 {
  font-size: 20px;
  color: #808080;
}
h3 {
  font-size: 16px;
}
a,
a:visited,
a:hover {
  text-decoration: none;
  font-weight: normal;
  color: #808080;
}

a:focus,
a:hover {
  text-decoration: underline;
}

a.collapse {
  font-size: small;
  color: #e0e0e0;
}

.App {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: start;
  width: 100%;
  height: 100vh;
  max-height: 100vh;
  overflow-x: hidden;
  overflow-y: auto;

  .App-header {
    width: 100%;

    .logo {
      margin: 40px;
      text-align: right;
      img {
        width: 400px;
        max-width: 100%;
        height: auto;
      }
    }
  }

  .App-content {
    display: flex;
    flex-direction: column;
    width: 95%;
    margin: auto;
    align-items: end;
    justify-content: space-between;

    .MuiButtonGroup-root,
    .MuiInputBase-root,
    .MuiTextField-root {
      width: 400px;
      button {
        padding: 15px;
        border-color: #808080 !important;
        background-color: transparent !important;
        color: #808080 !important;
        &:first-child {
          width: 100%;
        }
        font-size: 20px;
        font-weight: 600;
      }
      @media screen and (max-width: 600px) {
        margin: auto;
        width: 100%;
      }
    }
    .social {
      text-align: center;
      width: 400px;
      img,
      svg {
        margin: 20px;
      }
    }
  }

  footer {
    color: #808080;
    font-size: 12px;
    text-align: center;
    line-height: 2;
  }
}

.apod,
.epic,
.weather {
  h2,
  h3,
  h4 {
    text-align: center;
    width: 100%;
    margin: 10px 0;
  }
  img {
    border: none;
    max-height: 85vh;
    max-width: 100%;
    height: fit-content;
    width: fit-content;
  }

  iframe,
  video,
  embed {
    min-height: 500px;
    width: 900px;
    max-width: 100vw;
    border: none;
  }

  .close-btn {
    float: right;
    padding: 10px;
    text-align: center;
    button {
      width: fit-content;
      min-width: fit-content;
    }

    a {
      font-size: 0.9em;
    }
  }
}
.apod {
  img {
    max-width: 100vw;
  }
}

.weather {
  margin-top: 20px;

  .hightlight {
    @media screen and (max-width: 860px) {
      display: none !important;
    }
  }
}

.epic {
  margin: 5px auto;
  text-align: center;
}
.ReactModal__Overlay,
.ReactModal__Overlay--after-open {
  background-color: rgba(0, 0, 0, 0.9) !important;
  filter: alpha(opacity=60);
}
.ReactModal__Content,
.ReactModal__Content--after-open {
  padding: 5px 5px 15px !important;
}
.MuiAutocomplete-root {
  * {
    cursor: pointer;
  }
}
.event {
  margin: auto;
  margin-top: 20px;
  max-width: 700px;
}

.map-container {
  height: 500px;
  min-height: fit-content;
  cursor: pointer;
}

.Mui-expanded {
  margin: 0 !important;
  small {
    float: right;
  }
}
.MuiSwitch-root {
  padding: 14px !important;
  .MuiSwitch-switchBase {
    * {
      margin-top: -2px;
    }
    &.Mui-checked {
      color: #4f4e4e !important;
    }
  }
}

.map-overlay-inner {
  background-color: #fff;
  padding: 10px 20px;
  border-radius: 3px;
  color: "#000";
  text-align: "left";
  &.Severe {
    border: rgb(178, 24, 43) 8px solid;
  }
  &.Moderate {
    border: rgb(239, 138, 98) 8px solid;
  }
  &.Unknown {
    border: rgb(253, 219, 199) 8px solid;
  }
  display: block;
  h3,
  h4 {
    margin: 5px 0;
  }
}

.map-overlay {
  position: fixed;
  left: -5px;
  bottom: 45px;
  width: 400px;
  height: fit-content;
  padding: 10px;
  color: #1a2224;
  font-size: 14px;
  opacity: 0.8;
  @media screen and (max-width: 600px) {
    width: auto;
  }
}

.expand {
  margin: auto;
}

